[tool.poetry]
name = "test"
version = "0.0.1"
description = "ok"
authors = ["SANTOOS00 <mohamederraiss@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
flake8 = "^7.2.0"
mypy = "^1.19.1"
textual = "^8.1.1"
textual-canvas = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
